--- a/app/src/main/res/drawable/shape_for_light_effect.xml
+++ b/app/src/main/res/drawable/shape_for_light_effect.xml
@@ -2,8 +2,10 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
 
-    <solid android:color="#C1C0C0"/>
+    <solid android:color="#FFFFFF"/>
     <stroke
-        android:width="5dp"
-        android:color="#C1C0C0"/>
+        android:width="1dp"
+        android:color="#88FFFFFF"/>
+
+
 </shape>
